--- a/src/ui/main_window.ui
+++ b/src/ui/main_window.ui
@@ -352,7 +352,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Mute sounds for Mudlet (Triggers, Scripts, etc.)</string>
+    <string>Mute sounds from Mudlet (Triggers, Scripts, etc.)</string>
    </property>
    <property name="toolTip">
     <string>&lt;p&gt;Mutes media played by the Lua API and scripts.&lt;/p&gt;</string>
@@ -369,7 +369,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Mute sounds for the game (MCMP, MSP)</string>
+    <string>Mute sounds from the game (MCMP, MSP)</string>
    </property>
    <property name="toolTip">
     <string>&lt;p&gt;Mutes media played by the game (MCMP, MSP).&lt;/p&gt;</string>
