--- a/src/ui/main_window.ui
+++ b/src/ui/main_window.ui
@@ -139,6 +139,7 @@
     </property>
     <addaction name="dactionAbout"/>
     <addaction name="dactionUpdate"/>
+    <addaction name="dactionChangelog"/>
     <addaction name="dactionReportIssue"/>
    </widget>
    <widget class="QMenu" name="menuGames">
@@ -422,6 +423,11 @@
   <action name="dactionCloseProfile">
    <property name="text">
     <string>Close profile</string>
+   </property>
+  </action>
+  <action name="dactionChangelog">
+   <property name="text">
+    <string>Show changelog</string>
    </property>
   </action>
  </widget>
